# exhaustive-gs-sidb

./: .gitignore  CMakeLists.txt  README.md  exhaustive_gs.physeng  exhaustive_gs_py.physeng  setup.py
py/: .gitignore  exhaustive_gs.py
sample_problems/: db_pot_offset_problem.xml  db_pot_offset_problem_pots.json
src/: .gitignore  CMakeLists.txt  exhaustive_3_states_search.py  exhaustive_db_ground_state_search.py  exhaustive_gs.cc  exhaustive_gs.h  exhaustive_gs.py  global.h  interface.cc  interface.h  main.cc  requirements.txt
src/sample_problems/: cx_sample.xml  ha_sample.xml  or00_problem.xml  or_sample.xml  qca_wire_5_no_perturb_sample.xml
swig/: exhaustive_gs.i  wrapper_validation.py
